# experimental_gpu_programming_for_a_spectral_numerical_integration

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
benchmark/: benchmark.cpp
cuda_sandbox/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cuda_sandbox.code-workspace  cuda_sandbox_matrix_inverse  cuda_sandbox_matrix_multiplication  t
cuda_sandbox/include/: chebyshev_differentiation.h  cusolver_utils.h  getCusolverErrorString.h  globals.h  kronecker_tensor_product.h  lambdaIntegrator.h  lie_algebra_utilities.h  odeBase.h  qIntegrator.h  qadIntegrator.h  rIntegrator.h  spectral_integration_library.h  spectral_integration_utilities.h  supporting_functions.h  utilities.h
cuda_sandbox/src/benchmark/: benchmarck_quaternions.cu
cuda_sandbox/src/copy/: cublas_copy_example.cu
cuda_sandbox/src/getrf/: cusolver_getrf_example.cu
cuda_sandbox/src/main/: main.cu
cuda_sandbox/src/matrix_multiplication/: example_matrix_multiplication.cu
cuda_sandbox/src/matrix_multiplication/data/: A.csv  Ap.csv  P.csv
cuda_sandbox/src/spectral_integration/: spectral_integration.cu
include/: chebyshev_differentiation.h  lie_algebra_utilities.h  quaternionintegrator.h  spectral_integration_library.h  spectral_integration_position.h  spectral_integration_quaternion.h  spectral_integration_utilities.h  tictoc.h  utilities.h
src/: quaternionintegrator.cpp  revised_integration.cpp  revised_integration_position.cpp  revised_integration_quaternion.cpp
